mysql8-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql8-deployment
  labels:
    app: mysql8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql8
  template:
    metadata:
      labels:
        app: mysql8
    spec:
      containers:
      - name: mysql8
        image: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql8-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql8-persistent-storage
        persistentVolumeClaim:
          claimName: mysql8-pv-claim
