adminer-deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 4
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 4
            failureThreshold: 2
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  type: NodePort
  selector:
    app: adminer
  ports:
    - port: 8080
      targetPort: 8080
