percona-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: percona
  labels:
    app: percona
spec:
  type: LoadBalancer
  selector:
    app: percona
  ports:
    - port: 3306
      targetPort: 3306
