adminer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer-ingress
  annotations:
    nginx.com/sticky-cookie-services: "serviceName=adminer adminer_sid expires=2h path=/"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adminer
            port:
              number: 80
